Created JournalDataProvider file with an array of objects containing the information for each journal entry, now my previous journal entries stored in JournalDataProvider are displayed at the bottom of the DOM in HTML

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>My Daily Journal</title>
     <link rel="stylesheet" href="./styles/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@500&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -63,16 +64,20 @@
 
         </div>
 
-        <div>
+        <div id="entryLog">
             <p>Previous entries will go here</p>
         </div>
 
+
+
         <footer>
-            Created by Jake Butler, https://github.com/TJakeButler, ©
+           <p> Created by Jake Butler<a href="https://github.com/TJakeButler"> <br> My Github </a>
+            <br>© </p>
         </footer>
     </main>
 
     <script type="module" src="./scripts/main.js"></script>
+    
 </body>
 
 </html>
